<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">


  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:id="@+id/forget_password_instr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/forget_pw_instr"
        android:textColor="@color/colorGetInfo"
        android:textSize="18sp" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
        android:id="@+id/get_userId"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/get_id"
        android:textColor="@color/colorGetInfo"
        android:textSize="@dimen/input_text" />

      <TextView
        android:id="@+id/get_name"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/name"
        android:textColor="@color/colorGetInfo"
        android:textSize="@dimen/input_text" />

      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <EditText
        android:id="@+id/userid"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/userid_hint"
        android:inputType="number" />

      <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName" />
      </LinearLayout>

      <TextView
        android:id="@+id/get_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/address"
        android:textColor="@color/colorGetInfo"
        android:textSize="@dimen/input_text" />

      <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/address_hint"
        android:inputType="textPersonName" />

      <TextView
        android:id="@+id/get_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/get_new_pw"
        android:textColor="@color/colorGetInfo"
        android:textSize="@dimen/input_text" />

      <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword" />

      <TextView
        android:id="@+id/get_confirm_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/get_confirm_pw"
        android:textColor="@color/colorGetInfo"
        android:textSize="@dimen/input_text" />

      <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/confirm_pw"
        android:inputType="textPassword" />

      <Button
        android:id="@+id/button_update_password"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/table_title_background"
        android:text="@string/update" />

    </LinearLayout>
  </ScrollView>
</LinearLayout>