<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".project.banking.admin.NewManagerActivity">

  <TextView
    android:id="@+id/make_teller_instr"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:text="@string/create_instr"
    android:textSize="18sp"
    android:textColor="@color/colorGetInfo"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/teller_info_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="32dp"
    android:text="@string/name"
    android:textSize="@dimen/input_text"
    android:textColor="@color/colorGetInfo"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/make_teller_instr" />

  <EditText
    android:id="@+id/teller_name"
    android:layout_width="352dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:ems="10"
    android:hint="@string/name_hint"
    android:inputType="textPersonName"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/teller_info_name" />

  <TextView
    android:id="@+id/teller_info_age"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:text="@string/age"
    android:textSize="@dimen/input_text"
    android:textColor="@color/colorGetInfo"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/teller_name" />

  <EditText
    android:id="@+id/teller_age"
    android:layout_width="352dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="6dp"
    android:ems="10"
    android:hint="@string/age_hint"
    android:inputType="number"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/teller_info_age" />

  <TextView
    android:id="@+id/teller_info_address"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:text="@string/address"
    android:textSize="@dimen/input_text"
    android:textColor="@color/colorGetInfo"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/teller_age" />

  <EditText
    android:id="@+id/teller_address"
    android:layout_width="352dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="7dp"
    android:ems="10"
    android:hint="@string/address_hint"
    android:inputType="textPersonName"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/teller_info_address" />

  <TextView
    android:id="@+id/teller_info_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:text="@string/password"
    android:textSize="@dimen/input_text"
    android:textColor="@color/colorGetInfo"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/teller_address" />

  <EditText
    android:id="@+id/teller_password"
    android:layout_width="352dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:ems="10"
    android:hint="@string/pw_hint"
    android:inputType="textPassword"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/teller_info_password" />

  <Button
    android:id="@+id/button_create_teller"
    android:layout_width="@dimen/button_width"
    android:layout_height="@dimen/button_height"
    android:layout_marginTop="8dp"
    android:layout_marginStart="16dp"
    android:text="@string/create"
    android:background="@color/table_title_background"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginLeft="16dp"
    app:layout_constraintTop_toBottomOf="@+id/message" />

  <TextView
    android:id="@+id/message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:textSize="@dimen/input_text"
    android:textColor="@color/colorImportant"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/teller_password" />

</androidx.constraintlayout.widget.ConstraintLayout>
