<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <Button
    android:id="@+id/button_admin_message"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="32dp"
    android:layout_marginStart="32dp"
    android:layout_marginTop="36dp"
    android:background="@color/table_title_background"
    android:text="@string/view_own_msg" />

  <Button
    android:id="@+id/button_view_any_message"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="32dp"
    android:layout_marginStart="32dp"
    android:layout_marginTop="16dp"
    android:background="@color/table_title_background"
    android:text="@string/view_any_msg" />

  <Button
    android:id="@+id/button_leave_message"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="32dp"
    android:layout_marginStart="32dp"
    android:layout_marginTop="16dp"
    android:background="@color/table_title_background"
    android:text="@string/leave_msg" />
</LinearLayout>